assets/css/screen.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;1,300;1,400&display=swap");
/*@import url("//basehold.it/25");*/
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/
/* stylelint-disable */
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}html,.stylelint{line-height:1}body,.stylelint{line-height:inherit}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
/* stylelint-enable */

/* Begin site styles below */

/* base styles */
html {
  font-family: Raleway, "Hoefler Text", Georgia, "Times New Roman", sans-serif;
  font-size: 1.25em; /* 20/16=1.25*/
  line-height: 1.25em; /*25/20=1.25*/
  background-color: #222;
  color: #D3D3D3;
  padding: 1em; /*25/25=1*/
}

@supports (display: grid) {
  /* No L/R padding when we have grid...*/
  html { padding: 1em 0; }/*25/25=1*/
}

body {
  /* ...because we'll use columns to keep the content away from the edge of the viewport */
  display: grid;
  grid-template-columns: minmax(1em,1fr /*25/25=1*/) minmax(min-content,85ch) minmax(1em,1fr /*25/25=1*/);

}

header, nav, main, footer {
  grid-column: 2/3;
}

h1 {
  font-size: 1.7769em; /* 35.538/20=1.7769     two steps up modular scale */
  line-height: 1.406944679em; /*50/35.538=1.406944679*/
}

h2 {
  font-size: 1.333em; /* 26.66/20=1.333 */
  padding-top: 0.9377344336em; /*25/26.66=.9377344336 */
  margin-bottom: 0.9377344336em; /*25/26.66=.9377344336 */
  font-weight: 600;
}

h3 {
  margin-top: 1.25em; /*25/20=1.25*/
  margin-bottom: 1.25em; /*25/20=1.25*/
  font-weight: 600;
}

h3.edu {
  margin-top: 0.83335em; /*16.667/20=.83335*/
}

h4 {
  padding-bottom: 0.83335em;/*16.667/20=.83335*/
}

h4.addy {
  padding-bottom: 0.83335em;/*16.667/20=.83335*/
}

p {
  text-indent: 1.875em; /*37.5/20=1.875*/
  padding-left: 0.55555em; /*11.111/20=.55555*/
  padding-right: 0.55555em; /*11.111/20=.55555*/
}

p.subheader {
  text-indent: 0;
}

p.footer {
  text-indent: 0;
  text-align: center;
}

li {
  margin-top: 0.4em; /*8/20=.4*/
}

li.active {
  padding-bottom: 0.83335em; /*16.667/20=.83335*/
}

li.artist,
li.task {
  padding-top: 0.83335em; /*16.667/20=.83335*/
}

li.title {
  padding-bottom: 0.9em;  /*18/20=.9*/
}

ul.info {
  padding-left: 1.2em; /*30/25=1.5*/
  list-style-type: circle;
}

ul.active {
  padding-left: 1em; /*25/25=1.25*/
  padding-bottom: 0.44444em; /*11.111/25=.44444*/
  list-style-type: circle;
}
ul.post {
  padding-left: 1.333em;/*33.325/25=1.333*/
  list-style-type: square;
  padding-bottom: 0.1em; /*2/20=0.1*/
}
ul.artists,
ul.tasks {
  padding-left: 1.77688em; /*44.422/25=1.77688*/
  list-style-type: circle;
}
img {
  display: block;
  max-width: 100%;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.25em; /*25/20=1.25*/
}
section.break {
  padding-bottom: 0.83335em; /*16.667/20=.83335*/
}
figure.alice,
figure.misty {
  padding-bottom: 0.83335em;  /*16.667/20=.83335*/
}
figure.rhapsody,
figure.polkadots,
figure.prince {
  padding-bottom: 1em; /*20/20=1*/
}
figure.rose,
figure.central {
  padding-bottom: 0.9em; /*18/20=.9*/
}



/* layout styles */


/* Modular Styles */
.nav a {
  display: block;
  text-decoration: none;
  background: #f6eee1;
  color: #222;
  padding: 0.75em; /*15/20=.75*/
}
.nav li {
  padding-bottom: 1.666666666666666666em; /*25/20=1.25*/
}
.nav a:hover {
  background: #ebdabc;
}

/* state styles */

@media screen and (min-width: 20.625em) { /*330/16=20.625*/
  .nav {
    display: flex;
  }
  .nav::after {
    content: "";
    display: block;
    clear: both;
    float: none;
  }
  .nav li {
    text-align: center;
    padding-bottom: 1.25em; /*25/20=1.25*/

    /*Layout w/ floats */
    float: left;
    width: 33.33333333333%;

    /* layout w/ flexbox*/
    flex: 1 1 auto;
  }
  @supports (display: flex) {
    .nav li {
      width: auto;
    }
  }
  .nav a {
    margin-right: 0.6em; /*12/20=.6*/
  }
  .nav li:last-child {
    margin-right: 0;
  }
  h2 {
    padding-top: 0.4em; /*8/20=.4*/
  }
  h3 {
    font-weight: 600;
  }

}

@media screen and (min-width: 37.5em) { /*600/16=37.5*/
  p {
    padding-left: 1.875em; /*37.5/20=1.875*/
    padding-right: 1.875em; /*37.5/20=1.875*/
  }
  p.subheader {
    text-indent: 0;
    padding-left: 0;
    padding-right: 0;
  }
  figure::after,
  section::after {
    content: "";
    display: block;
    clear: both;
    float: none;
  }
  figure img {
    float: left;
    width: 50%;
  }
  figure {
    margin-bottom: 1.8em; /*36/20=1.8*/
    clear: both;
    float: none;
  }
  figcaption {
    /*padding-left: 52%; /* All browsers get this close-enough value... */
    padding-left: calc(50% + 1.666666666666666666em); /* calc()-supporting browsers get the precise value. */
    padding-right: 0.6em; /*12/20=.6*/
    text-align: left;
  }

@media screen and (min-width: 800px) {
  html {
    background-color: #191919;
    color: #D3D3D3;
  }

  head {
    background-color: #222222;
    color: #D3D3D3;
  }

  header, nav, main, footer {
    background-color: #222222;
    color: #D3D3D3;
    padding-left: 15px;
    padding-right: 15px;
  }
  }
}

